# sqlite_cpp_playground

./: .clang-format  CMakeLists.txt  README.md  exec.sh  main.cpp
docker/: Dockerfile  docker-compose.yaml
